--- a/style.css
+++ b/style.css
@@ -91,35 +91,42 @@ button{
   margin-bottom: 1rem;
   font-size: 2.4rem;
 }
-.box ul{
-    list-style: none;
-}
 
-.box ul{
+.form__radio{
     display: flex;
     justify-content: space-between;
-    margin: 2.4rem 0;
+    margin: 3.2rem 0  2.4rem;
 }
 
- ul li{
-    display: grid;
-    place-items: center;
+
+ form input{
+   display: none;
+}
+
+ form label{
+    display: inline-block;
     color: var(--clr-grey);
     background: var(--clr-blue-01);
-    cursor: pointer;
-    width: 5.1rem;
-    height: 5.1rem;
-    border-radius: 100%;
+    width: 5rem;
+    height: 5rem;
+    display: grid;
+    place-items: center;
+    border-radius: 50%;
     font-size: 1.4rem;
     font-weight: 700;
     transition: all .3s ease;
+    
 }
 
 
- ul li:hover,
- ul li:active{
+ form label:hover{
     color: var(--clr-white) ;
     background: var(--clr-primary);
+}
+
+form input:checked + label{
+    color: var(--clr-white);
+    background-color: var( --clr-grey-02);
 }
 
 
@@ -134,6 +141,7 @@ button{
     padding: 1.2rem 0;
     border-radius: 2.2rem;
     transition: all .3s ease;
+    display: block;
 }
 
 .box .btn:hover,
@@ -141,9 +149,11 @@ button{
     background: var(--clr-white) ;
     color: var(--clr-primary);
 }
+
+.btn{
+    border: 0;
+}
  
-
-
 
 
 .box .box-confirm-img{
@@ -184,11 +194,6 @@ button{
     visibility: hidden;
 }
 
-.active{
-    color: var(--clr-white);
-    background-color: var( --clr-grey-02);
-    
-}
 
 .attribution{
     color: var(--clr-grey);
